@@ -161,9 +161,7 @@ public abstract class AFX2Component implements
 	 */
 	@Override
 	public final IActionListener<EventHandler<Event>, Event, Object> getActionListener() {
-		FX2Action action = new FX2Action(this.id);
-		//System.out.println("coord: "+this.getCoordinator()+" this: "+this+" action: "+action);
-		return new FX2ActionListener(action,
+		return new FX2ActionListener(new FX2Action(this.id),
 				this.getCoordinator());
 	}
 	
