@@ -1,3 +1,6 @@
+24. Nov. 2001 - amo -  bug found when component changed execution target to an other perspective; returned (root)Node is reused from "old" perspectve so that all actions do not fin a local target becose they are related to the observer of the old perspective. see TODO for more details. 
+24. Nov. 2001 - amo -  changed FX2ComponentRelpaceWorker, changed behavior when component change execution target; split methods in *LocalTargerChange and PerspectiveChange.
+24. Nov. 2001 - amo -  FX2Component add worker now is handled in application thread, it only acts as proxy to the methods in AFX2ComponentWorker; all methods involved must be executed in application thread
 23. Nov. 2011 - amo -  tearDown for AFX2Components implemented
 23. Nov. 2011 - amo -  changed initComponent in AFX2Perspective to check if it runs in application thread, otherwise execute in application thread;
 22. Nov. 2011 - amo -  postHandle method added to workspace to handle menu entries and toolbars 
